syntax = "proto3";

option csharp_namespace = "CountwareTraffic.Services.Companies.Grpc";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "Grpc/Protos/baseArea.proto";

package area;

service Area {
    rpc GetAreaById(GetAreaRequest) returns (GetAreaDetailResponse){}
    rpc GetAreas(GetAreasRequest) returns (AreaPagingResponse){}
    rpc ChangeArea(UpdateAreaRequest) returns (baseArea.UpdateSuccessResponse){}
    rpc DeleteArea(DeleteAreaRequest) returns (baseArea.DeleteSuccessResponse){}
    rpc AddArea(CreateAreaRequest) returns (baseArea.CreateSuccessResponse){}
    rpc GetAreaTypes(GetAreaTypesRequest) returns(GetAreaTypesResponse){}
}


/*REQUESTS*/
message GetAreaRequest {
	string AreaId = 1;
}

message GetAreasRequest {
	string DistrictId = 1;
    baseArea.PagingRequest PagingRequest = 2;
}

message UpdateAreaRequest{
    string AreaId = 1;
    string Name = 2;
    google.protobuf.StringValue Description = 3;
    int32 AreaTypId = 4;
    google.protobuf.StringValue GsmNumber = 5; 
    google.protobuf.StringValue PhoneNumber = 6; 
    google.protobuf.StringValue EmailAddress = 7; 
    google.protobuf.StringValue FaxNumber = 8; 
    google.protobuf.StringValue Street = 9; 
    google.protobuf.DoubleValue Latitude = 10;
    google.protobuf.DoubleValue Longitude = 11;
    google.protobuf.StringValue PhoneNumber2 = 12; 
}

message DeleteAreaRequest{
    string AreaId = 1;
}

message CreateAreaRequest{
    string DistrictId = 1;
    string Name = 2;
    google.protobuf.StringValue Description = 3;
    int32 AreaTypeId = 4;
    google.protobuf.StringValue GsmNumber = 5; 
    google.protobuf.StringValue PhoneNumber = 6; 
    google.protobuf.StringValue EmailAddress = 7; 
    google.protobuf.StringValue FaxNumber = 8; 
    google.protobuf.StringValue Street = 9; 
    google.protobuf.DoubleValue Latitude = 10;
    google.protobuf.DoubleValue Longitude = 11;
    google.protobuf.StringValue PhoneNumber2 = 12; 
}

message GetAreaTypesRequest{

}



/*RESPONSES*/
message AreaPagingResponse {
    int32 TotalCount = 1;
    int32 Page = 2;
    int32 Limit = 3;
    bool HasNextPage = 4;
    google.protobuf.Int32Value Next = 5;
    google.protobuf.Int32Value Prev = 6;
    repeated AreaDetail AreaDetails  = 7;
}

message GetAreaDetailResponse {
    AreaDetail AreaDetail  = 1;
}

message GetAreaTypesResponse{
    repeated AreaType AreaTypes  = 1;
}



/*MODELS*/
message AreaDetail{
    string Id = 1;
    baseArea.Audit Audit = 2;
    string DistrictId = 3;
    string Name = 4;
    google.protobuf.StringValue Description = 5; 
    google.protobuf.StringValue AreaTypeName = 6;
    google.protobuf.StringValue GsmNumber = 7; 
    google.protobuf.StringValue PhoneNumber = 8; 
    google.protobuf.StringValue EmailAddress = 9; 
    google.protobuf.StringValue FaxNumber = 10; 
    google.protobuf.StringValue Street = 11; 
    google.protobuf.DoubleValue Latitude = 12;
    google.protobuf.DoubleValue Longitude = 13;
    google.protobuf.StringValue PhoneNumber2 = 14;
    int32 AreaTypeId = 15;
}

message AreaType{
    int32 Id = 1; 
    string Name = 2;
}

